refactor: replace custom `boundedSize` and `clamp` logic with `RXMath.clamp` across multiple classes
- Removed redundant `boundedSize` and `clamp` methods and replaced their usages with `RXMath.clamp`.
- Improved code consistency and reuse by leveraging the shared utility method.
- Updated imports and cleaned up related references.